tests/NormalTests/paczka2/big_fuzzy/80225861.err
Error in line 2: f1WQ A303 56,6
Error in line 16: dKWuagduo A347 29,6
Error in line 9: 51WGfc S633 63,2
Error in line 17: dKWuagduo S633 0,6
Error in line 8: f1WQ S633 58,8
Error in line 36: WbsP3E6LtPM S633 76,5
Error in line 46: dKWuagduo S633 50,4
Error in line 59: WbsP3E6LtPM A430 80,4
Error in line 62: WbsP3E6LtPM A303 ,,,6
Error in line 54: 51WGfc A347 85,8
Error in line 48: xqXCG A430 53,3
Error in line 65: xqXCG S633 93,4
Error in line 64: 51WGfc A430 99,0
Error in line 72: S633 A430 14,3
Error in line 56: zJvU8QZrsf A430 108,2
Error in line 71: 51WGfc A303 50,4
Error in line 91: xqXCG S633 29,8
Error in line 67: WbsP3E6LtPM A303 64,0
Error in line 92: xqXCG A347 6,9
Error in line 110: S633 A430 12S,2
Error in line 105: 51WGfc A303 49,9
Error in line 111: 51WGfc S633 46,8
Error in line 104: S633 A430 94,3
Error in line 115: S633 S633 89,2
Error in line 120: dKWuagduo A430 69,2
Error in line 128: xqXCG A303 77,01
Error in line 119: f1WQ A347 61,1
Error in line 129: f1WQ A430 19,3
Error in line 134: xqXCG A303 131,1
Error in line 124: dKWuagduo A303 10,6
Error in line 138: WbsP3E6LtPM S633 17,8
Error in line 140: zJvU8QZrsf A347 5,5
Error in line 155: WbsP3E6LtPM A303 1,05
Error in line 152: xqXCG A303 196,1
Error in line 157: WbsP3E6LtPM A303 5,2
Error in line 174: f1WQ S633 80,5
Error in line 181: dKWuagduo A303 50,3
Error in line 172: S633 A430 81,9
Error in line 182: 51WGfc A430 25,2
Error in line 185: zJvU8QZrsf A347 10,8
Error in line 189: WbsP3E6LtPM S633 20,6
Error in line 197: WbsP3E6LtPM A347 94,3
Error in line 170: xqXCG S633 12,6
Error in line 211: zJvU8QZrsf A347 93,6
Error in line 216: zJvU8QZrsf A303 98,5
Error in line 222: zJvU8QZrsf A430 12,8
Error in line 226: xqXCG A430 14,8
